--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="" />
     <meta name="author" content="Cesar Inga" />
 
-    <title>Responsive Resume Template</title>
+    <title>Resume_Cesar Inga</title>
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 
