--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <meta name="description" content="" />
     <meta name="author" content="Cesar Inga" />
 
-    <title>Resume_Cesar Inga</title>
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <title>Resume_Cesar Inga Samaniego</title>
+    <link rel="icon" href="/webistepreview.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/webistepreview.ico" type="image/x-icon">
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
@@ -153,9 +153,9 @@
           <p class="mobile-name">
             <img class="mobile-img" src="avatar.jpg" alt="Profile Picture" />
           </p>
-          <p class="mobile-name">John <span class="family-name"> Doe</span></p>
+          <p class="mobile-name">Cesar <span class="family-name"> Inga</span></p>
           <h1 class="mb-3 mt-5">
-            Cesar
+            Cesar Augusto
             <span class="family-name"> Inga Samaniego</span>
           </h1>
           <p class="mobile-profession">
