--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <section class="resume-section p-3 p-lg-5" id="about">
         <div class="my-auto">
           <p class="mobile-name">
-            <img class="mobile-img" src="avatar.jpg" alt="Profile Picture" />
+            <img class="mobile-img" src="CVWebsite.jpg" alt="Profile Picture" />
           </p>
           <p class="mobile-name">Cesar <span class="family-name"> Inga</span></p>
           <h1 class="mb-3 mt-5">
