--- a/index.html
+++ b/index.html
@@ -314,8 +314,8 @@
         </div>
 
         <p class="pt-3">
-          <i class="fas fa-user-tag"></i> #Team-oriented
-          #Goal-oriented #Communication
+          <i class="fas fa-user-tag"></i> #Responsibility
+          #Problem-solving #Organization
         </p>
       </section>
 
