--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
           <div class="col-12 col-md-6 col-lg-4">
             <div class="card mb-4">
               <div class="edu-icons">
-                <i class="fas fa-university fa-5x"></i>
+                <i class="fas fa-graduation-cap fa-5x edu-icons"></i>
               </div>
 
               <div class="card-body pb-0">
