sumary profile changed

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           </h4>
 
           <p class="mb-3">
-            I am an Electrical Engineer with master´s degree in Information Technology with a first experience in software and graphical-user-interface (GUI) development as well as several years in managing projects looking for growing professionally in the software development sector.
+            I am an Electrical Engineer with master´s degree in Information Technology with a first experience in software and graphical-user-interface (GUI) development as well as several years in managing projects aiming to grow professionally in the software development sector.
             <!-- Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.  -->
           </p>
 
