--- a/index.html
+++ b/index.html
@@ -161,12 +161,12 @@
           </h1>
 
           <p class="mobile-profession">
-            <mt1>MSc. Information Technology
+            <mt1>MSc. in Information Technology
             </mt1>
           </p>
           <h4 class="mb-4">
           <mt1>
-            MSc. Information Technology
+            MSc. in Information Technology
           </mt1>
           </h4>
 
