--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta
       name="viewport"
+      content="Web resume of Cesar Inga Samaniego. The portfolio contains 
+  all about my professional bakground. Click here for more details"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="description" content="" />
