--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="description" content=Web resume of Cesar Inga Samaniego. The portfolio contains 
-    all about my professional bakground. Click here for more details />
+    <meta name="description" content="Web resume of Cesar Inga Samaniego. The portfolio contains 
+    all about my professional bakground. Click here for more details" />
     <meta name="author" content="Cesar Inga" />
 
     <title>Web resume - Cesar Inga Samaniego</title>
