--- a/index.html
+++ b/index.html
@@ -574,18 +574,18 @@
 
         <li class="list-inline-item">
           <a href="https://www.xing.com/profile/Cesar_IngaSamaniego/cv" target="_blank" rel="noopener">
-           <fn> <i class="fab fa-xing"></i> </fn>
+           <fsm> <i class="fab fa-xing"></i> </fsm>
           </a>
         </li>
 
         <li class="list-inline-item">
           <a href="https://www.linkedin.com/in/cesar-augusto-inga-samaniego-48a2a374/" target="_blank" rel="noopener">
-            <i class="fab fa-linkedin-in"></i>
+            <fsm><i class="fab fa-linkedin-in"></i></fsm>
           </a>
         </li>
         <li class="list-inline-item">
           <a href="https://github.com/cesaringa" target="_blank" rel="noopener">
-            <i class="fab fa-github"></i>
+            <fsm><i class="fab fa-github"></i></fsm>
           </a>
         </li>
 
@@ -597,12 +597,12 @@
 
         <li class="list-inline-item">
           <a href="https://www.facebook.com/cesar.ingsamaniego" target="_blank" rel="noopener">
-            <i class="fab fa-facebook-f"></i>
+            <fsm><i class="fab fa-facebook-f"></i></fsm>
           </a>
         </li>
         <li class="list-inline-item">
           <a href="https://www.instagram.com/cesaringasamaniego/" target="_blank" rel="noopener">
-            <i class="fab fa-instagram"></i>
+           <fsm> <i class="fab fa-instagram"></i></fsm>
           </a>
         </li>
       </ul>
