--- a/index.html
+++ b/index.html
@@ -595,6 +595,7 @@
             <fsm><i class="fab fa-facebook-f"></i></fsm>
           </a>
         </li>
+
         <li class="list-inline-item">
           <a href="https://www.instagram.com/cesaringasamaniego/" target="_blank" rel="noopener">
            <fsm> <i class="fab fa-instagram"></i></fsm>
@@ -602,7 +603,7 @@
         </li>
 
         <li class="list-inline-item">
-          <a href="https://www.linkedin.com/in/cesar-inga-samaniego/" target="_blank" rel="noopener">
+          <a href="www.linkedin.com/in/cesar-inga-samaniego" target="_blank" rel="noopener">
             <fsm><i class="fab fa-linkedin-in"></i></fsm>
           </a>
         </li>
