--- a/index.html
+++ b/index.html
@@ -597,8 +597,8 @@
         </li>
 
         <li class="list-inline-item">
-          <!-- <a href="https://www.instagram.com/cesaringasamaniego/" target="_blank" rel="noopener"> -->
-            <a href="www.linkedin.com/in/cesar-inga-samaniego" target="_blank" rel="noopener">
+          <a href="https://www.instagram.com/cesaringasamaniego/" target="_blank" rel="noopener">
+            <!-- <a href="www.linkedin.com/in/cesar-inga-samaniego" target="_blank" rel="noopener"> -->
             <fsm> <i class="fab fa-instagram"></i></fsm>
           </a>
         </li>
